# QuadraSHAP

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: bench_cpp_vs_python.py  bench_mq_d3.py  bench_mq_sweep.py  plot_mq_results.py  synthetic_mq_efficiency.py  test_bench_phi_matrix.py  text_classification_benchmark.py  text_classification_experiment.py  treeshap_bench.py  treeshap_bench_plot.py  treeshap_bench_table.py  treeshap_bench_worker.py
benchmarks/results/mq/: mq_agg_d10000_krr_rbf.csv  mq_agg_d1000_krr_rbf.csv  mq_agg_d1000_svr_rbf.csv  mq_agg_d100_krr_rbf.csv  mq_agg_d100_svr_rbf.csv  mq_agg_d5000_krr_rbf.csv  mq_agg_d5000_svr_rbf.csv  mq_agg_d500_krr_rbf.csv  mq_agg_d50_krr_rbf.csv  mq_agg_d50_svr_rbf.csv  mq_raw_d10000_krr_rbf.csv  mq_raw_d1000_krr_rbf.csv  mq_raw_d1000_svr_rbf.csv  mq_raw_d100_krr_rbf.csv  mq_raw_d100_svr_rbf.csv  mq_raw_d5000_krr_rbf.csv  mq_raw_d5000_svr_rbf.csv  mq_raw_d500_krr_rbf.csv  mq_raw_d50_krr_rbf.csv  mq_raw_d50_svr_rbf.csv  mq_shapley_distance.csv  mq_shapley_distance_raw.csv
benchmarks/results/text/: dataset_catalog.csv  dataset_catalog.json  explainer_timing.csv  model_metrics.csv  perturbation_scores.csv
csrc/: explain_kernel.cpp
model/rotten_tomatoes/: decision_tree.joblib  extra_trees.joblib  krr_rbf.joblib  random_forest.joblib  svc_rbf.joblib
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  main_test.aux  main_test.bbl  main_test.blg  main_test.out  main_test.tex  references.bib
paper/sections/: proofs.tex  tree.tex
src/pgshapley/: _cpp_ext.py
src/pgshapley/treeshap/: explainer.py  quadrature_tree.py
src/quadrashap/: __init__.py  _cpp_ext.py
src/quadrashap/kernels/: explainer.py
src/quadrashap/product_games/: shapley.py
src/quadrashap/treeshap/: base.py  explainer.py  product_games.py  quadrature_tree.py  sklearn.py  unified.py
tests/: naive_tree_backend.py  test_backend_vs_naive.py  test_cpp_extension.py  test_phi_matrix.py  test_treeshap_e2e_vs_shap.py  test_treeshap_frontend_sklearn.py
