[project]
name = "quadrashap"
version = "0.1.0"
description = "TreeSHAP via product-game Shapley factors"
readme = "README.md"
requires-python = ">=3.11"
# Compatible with both NumPy 1.x and 2.x at runtime. Resolvers pick the highest
# matching version, so new installs land on 2.x; downstream users that pin
# numpy<2 (e.g. for benchmarking against libraries that haven't migrated yet)
# still resolve cleanly.
dependencies = [
    "jax==0.4.*",
    "jaxlib==0.4.*",
    "numpy>=1.24",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]
benchmarks = [
    "datasets>=2.19",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[dependency-groups]
testing = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "scikit-learn>=1.3",
    "shap>=0.50",
]
dev = ["quadrashap[jax]", {include-group = "testing"}]
benchmarks = [
    "datasets>=2.19",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[build-system]
# Build against NumPy 2.x: pybind11 >=2.12 emits a dual-ABI extension that
# loads under both NumPy 1.x (>=1.19) and 2.x. Building against 1.x would
# produce a v1-only wheel.
requires = ["scikit-build-core>=0.11", "pybind11>=2.12", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/quadrashap"]

# When no C++ compiler is available, fall back to pure-Python install.
[[tool.scikit-build.overrides]]
if.failed = true
wheel.cmake = false

[tool.uv]
environments = ["python_version >= '3.11' and python_version < '3.14'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
